...
                    Button("Cancel") {
                        self.onCancel()
                    }
                }

                ToolbarItem(placement: .confirmationAction) {
                    Button("Save") {
                        self.note = self.localNote
                        self.onSave()
                    }
                    .disabled(self.isSaveDisabled)
                }
            }
...
