...
                        .font(.caption)
                        .foregroundStyle(.secondary)
                }

                // Card Description
                VStack(alignment: .leading, spacing: 8) {
                    Text("Meaning")
                        .font(.headline)

                    Text(self.pull.cardDescription)
                        .font(.body)
                        .foregroundStyle(.secondary)
                }
...
